src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');


@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Krona+One&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  font-family: "Poppins";
}

#nav{
  
  /* border: 1px solid red; */
  height: 100px;
}

.navbar{
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 75%;
  margin: 0 auto;
  /* border: 1px solid green; */
  padding: 1em 0;
  
}

.logo{
  
}
.nav-right{
  /* border: 1px solid red; */
  display: flex;
  align-items: center;
  width: 75%;
  justify-content: space-between;
}

.navlinks{
  display: flex;
  justify-content: space-around;
  /* border: 1px solid blue; */
  width: 65%;
}

.navlinks a{
  box-shadow: inset 0 0 0 0 #000;
  padding: .2em .5em;
  /* margin: 0 2em; */
  color: #2D3441;
  border: 1px solid black;
  text-decoration: none;
  font-weight: 500;
  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
}

.navlinks a.active{
  color: #fff;
    box-shadow: inset 200px 0 0 0 #000;
}

.navlinks a:hover {
  color: #fff;
  box-shadow: inset 200px 0 0 0 #000;
  ;
}

.logo{
  cursor: pointer;
}

.logo h1{
  font-size: 1.5rem;
  letter-spacing: .1em;
  display: flex;
  align-items: center;
}

#nav button{
  
    outline: 0;
    cursor: pointer;
    border: 1px solid #000;
    border-radius: 3px;
    color: #fff;
    background: #000;
    font-size: 16px;
    font-weight: 600;
    line-height: 28px;
    padding: 16px 20px;
    text-align: center;
    transition-duration: .15s;
    transition-property: all;
    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
  
    
}

#nav button:hover {
  color: #000;
  background: rgb(255, 218, 87);
}


/* hamnav */

.ham-nav{
  position: absolute;
  display: flex;
  /* border: 1px solid red; */
  height: 100dvh;
  width: 100%;
  justify-content: center;
  align-items: center;
  background-color: #000F08;
  z-index: 1;
  transition: all 200ms ease-in-out;
}

.ham-nav .navlinks{
  flex-direction: column;
  gap: 15px;
  align-items: center;
  width: 100%;
}

.ham-nav a{
  opacity: 0.9;
  color: white;
  border: none;
}

.ham-nav a.active{
  border: none !important;
  box-shadow: none;
}

.ham-nav .nav-right{
  flex-direction: column;
  gap: 20px;
  /* border: 1px solid red; */
  width: 100%;
  align-items: center;
}

.ham-nav button{
  background-color: #ED231D !important;
}
.ham-nav button:hover{
    color: white !important;
}

.ham-nav .socials{
  /* border: 1px solid white !important; */
  width: 90% !important;
  display: flex !important;
  justify-content: center !important;
  gap: 10px !important;
  align-items: center !important;
}
.ham-nav .socials svg{
  fill: white !important;
  width: 20px !important;
}

.ham-nav .logo h1{
  color: white !important;
}



.home{
  /* border: 2px solid black; */
  background: url(./assets/images/home-bg.png);
  background-position-x: center;

  height: calc(100dvh - 100px);
  display: flex;
  align-items: center;
justify-content: center;  
gap: 50px;
}

.home-main{
  /* border:  2px solid black; */
  width: 35%;
}

.hero{
  /* border: 1px solid green; */
}
.hero img{
  width: 500px;
}


.hero img {
  width: 500px;
  animation: float 3s ease-in-out infinite;
}

@keyframes float {

  0%,
  100% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-10px);
  }
}


.words h1{
  font-size: 3rem;

  width: 80%;
  font-family: "Plus Jakarta Sans";
  color: #111827;
}

.words p{
  margin-top: 1.7em;
  color: #4B5563;
}

.words button{
  outline: 0;
  margin-top: 1.7em;
    cursor: pointer;
    border: 2px solid #000;
    border-radius: 3px;
    color: #fff;
    background: #000;
    font-size: 20px;
    font-weight: 600;
    line-height: 28px;
    padding: 16px 20px;
    text-align: center;
    transition-duration: .15s;
    transition-property: all;
    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
}

.words button:hover {
  color: #000;
  background: rgb(255, 218, 87);
}

.socials{
  margin-top: 1.7rem;
}

.socials img{
  width: 22px;
  margin: 0 .3em;
  transition: all 100ms ease-in-out ;
  cursor: pointer;
}

.socials img:hover{
  transform: scale(1.3);
  
}

.stack-con{
  /* border: 1px solid red; */
  background-color: #000F08;
  padding: 4em 0;
}
.stacks{
  /* border: 1px solid green; */
  display: flex;
  margin: 0 auto;
  width: 80%;
  flex-grow: 1;
  flex-wrap: wrap;
  justify-content: space-between;
}

.stack{
  margin-bottom: 1em;
  width: 49.2%;
  height: 280px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  font-family: "Plus Jakarta Sans";
  background-color: #000;
  padding-left: 4em;
  padding-top: 1em;
  padding-bottom: 1em;

  box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0);
    -webkit-box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0);
    -moz-box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0);

    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 5px;


    transition: transform 0.2s ease-in-out;
}


/* .glowing-cursor {
  position: fixed;
  pointer-events: none;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color: rgba(0, 128, 255, 0.6);
  box-shadow: 0 0 15px 5px rgba(0, 128, 255, 0.6);
  transition: transform 0.1s ease-out;
  z-index: 9999;
  opacity: 1;
} */

.stack h2 {
  color: #FCB9B9;
  font-weight: 600;
  opacity: 0.8;

}

.stack p {
  margin-top: 1em;
  width: 70%;
  color: rgba(255, 255, 255, 0.8)
}
/* ... */

